our fixed navbar is 50px + 20px margin, 60px allows the anchors to be close enough to the nav bar w/o overlap and still activate the affix menu and scroll spy

--- a/website/static/css/site.css
+++ b/website/static/css/site.css
@@ -917,8 +917,8 @@ h1.unavailable {
 }
 
 .anchor {
-    margin-top: -50px;
-    padding-top: 50px;
+    margin-top: -60px;
+    padding-top: 60px;
     display: block;
 }
 
